tdf#138540 formula popover in the wrong place

since...

commit e087e25f05e689091cbf1c4f91b6e93878ac17ec
Date:   Mon Oct 5 14:19:05 2020 +0100

    weld InputBar

Change-Id: Ib19aa088e9f593046e611d8ec4afe33b65c1b7fd