sc/source/ui/inc/inputwin.hxx
@@ -79,6 +79,8 @@ public:
     virtual EditView*       GetEditView() override;
     virtual bool            HasEditView() const override;
 
+    const OutputDevice&     GetEditViewDevice() const;
+
                         // for function autopilots
     virtual void            MakeDialogEditView() override;
 
@@ -204,8 +206,10 @@ public:
 
     virtual void            InsertAccessibleTextData(ScAccessibleEditLineTextData& rTextData) override;
     virtual EditView*       GetEditView() override;
-    tools::Long                    GetLastNumExpandedLines() const;
-    virtual tools::Long            GetNumLines() const override;
+    const OutputDevice&     GetEditViewDevice() const;
+    Point                   GetCursorScreenPixelPos(bool bBelowLine);
+    tools::Long             GetLastNumExpandedLines() const;
+    virtual tools::Long     GetNumLines() const override;
     int                     GetPixelHeightForLines(tools::Long nLines);
     weld::ScrolledWindow&   GetScrollWin();
     virtual const OUString& GetTextString() const override;
@@ -245,6 +249,7 @@ public:
     void                    StartEditEngine() override;
     virtual EditView*       GetEditView() override;
     virtual bool            HasEditView() const override;
+    Point                   GetCursorScreenPixelPos(bool bBelowLine);
     virtual void            Resize() override;
     virtual const OUString& GetTextString() const override;
     virtual void            StopEditEngine(bool bAll) override;
@@ -301,6 +306,8 @@ public:
 
     bool            IsInputActive();
     EditView*       GetEditView();
+    vcl::Window*    GetEditWindow();
+    Point           GetCursorScreenPixelPos(bool bBelowLine = false);
 
     void            TextGrabFocus();
     void            TextInvalidate();
